test/users/smith/exitNoParen.good
exitNoParen.chpl:2: error: missing arguments to exit()
